--- a/Master/templates/master/base.html
+++ b/Master/templates/master/base.html
@@ -12,7 +12,7 @@
   </head>
   
   <body>
-      <h3>Demo Project For Gold Lavender & Co.</h3>
+      <h3>Demo Project For Gold Lavender Co. LTD.</h3>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                    
