--- a/Master/templates/master/delete.html
+++ b/Master/templates/master/delete.html
@@ -1,6 +1,6 @@
 {% extends 'master/base.html' %}
 {% block body_block %}
-<h3>Delete {{deletedVal.model}}?</h3>
+<h3>Delete {{deletedVal.model}} {{deletedVal.color}}?</h3>
 <form method="POST">
     {% csrf_token %}
     <input type="submit" name="submit" value="Delete" class="btn btn-danger btn-sm"> <a href="{% url 'viewmobiles'  %}" class="btn btn-info btn-sm">Cancel</a>
